Fixed button overlap on front page

--- a/i2p2www/static/styles/duck/default.css
+++ b/i2p2www/static/styles/duck/default.css
@@ -78,7 +78,6 @@ div#content .main h1 {
 .main .get-i2p {
     display:block;
     top:50%;
-    height:1em;
     padding:.5em;
     line-height:1em;
     font-size:2em;
