--- a/i2p2www/static/styles/duck/desktop.css
+++ b/i2p2www/static/styles/duck/desktop.css
@@ -227,7 +227,7 @@ div#content .main {
     text-shadow:1px 1px 2px rgba(0,0,0,.3); color:white; margin-bottom:.5em;}
     .main .get-i2p {
         position:absolute; display:block; top:50%; right: 10%;
-        margin-top:-1em; height:1em; padding:.5em; line-height:1em;
+        margin-top:-1em; max-width:20%; padding:.5em; line-height:1em;
         font-size:2em; color:white; font-family:Arial, Helvetica, sans-serif; font-weight:bold; 
         text-transform:uppercase; text-decoration:none; text-align:center; 
         background:green; border-radius:.3em; -moz-transform:rotate(-5deg); 
